--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,45 @@
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+
 body {
     text-align: center;
+    /*credits: https://www.deviantart.com/mockingjay1701/art/Pixel-art-landscape-525082296*/
+    background-image: url("sky.png");
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgb(24, 34, 60);
 }
 
 h1 {
-    font-family: Monoton;
+    font-family: "Press Start 2P", Impact;
+    color: antiquewhite;
     font-size: 70px;
     margin: 0.2em;
 }
 
 h2 {
+    font-family: "Courier New", Courier, monospace;
     margin: 1em 0 0.25em;
+    color: antiquewhite;
 }
 
 h2:first-of-type {
     margin-top: 0.5em;
 }
 
+#sizePicker {
+    font-family: "Courier New", Courier, monospace;
+    color: antiquewhite;
+}
+
 table,
 tr,
 td {
-    border: 1px solid black;
+    border: solid 1px rgba(255, 255, 255, .5);
 }
 
 table {
+    background-color: rgba(255, 255, 255, 0.5);
     border-collapse: collapse;
     margin: 0 auto;
 }
